--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,6 +1,7 @@
 <!-- /templates/cart.liquid -->
 {%- assign fulfillment_method = '' -%}
 {%- assign invalid_fulfillment = false -%}
+{%- assign has_custom_pricing = false -%}
 <div class="grid">
   <div class="grid__item">
     {% if cart.item_count > 0 %}
@@ -58,7 +59,7 @@
                     {% endunless %}
                     <br>
                     {% if item.properties._method == 'pickup' %}
-                      <span class="txt--minor cart__policies">{{item.properties._method}} in {{ item.variant.title }}</span>
+                      <span class="txt--minor cart__policies">{{ 'layout.product.pickup' | t }}: {{ item.properties.pickup_location }}</span>
                     {% endif %}
                   </p>
                   {%- if item.properties._method != blank -%}
@@ -74,6 +75,7 @@
                 </td>
                 <td class="cart__table-cell--price medium-up--text-right" data-label="{{ 'cart.label.price' | t }}">
                   {%- if item.properties._custom_price != blank -%}
+                    {%- assign has_custom_pricing = true -%}
                     {%- assign item_value = item.properties._custom_price | times: 100 -%}
                     {%- assign item_value = item_value | divided_by: item.quantity -%}
                     {{item_value | money}}
@@ -125,12 +127,78 @@
 
         <footer class="cart__footer">
           <div class="grid">
+            {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
+              <div class="grid__item medium-up--one-third">
+                <p class="cart__delivery-title">{{ 'layout.cart.choose_delivery_type' | t }}</p>
+                {%- if fulfillment_method == 'delivery' -%}
+                  <label for="standard-method" class="cart__method-label">
+                    <input type="radio" name="attributes[_method]" class="js-delivery-type" id="standard-method" value="standard_delivery" checked>
+                    {{ 'layout.cart.standard_delivery' | t }}
+                  </label>
+                  <p>
+                    <dfn class="sr-only">{{ 'layout.cart.standard_delivery' | t }}</dfn>
+                    {{ 'layout.cart.standard_delivery_explanation' | t }}
+                  </p>
+                  <label for="noon-method" class="cart__method-label">
+                    <input type="radio" name="attributes[_method]" class="js-delivery-type" id="noon-method" value="before_noon">
+                    {{ 'layout.cart.before_noon' | t }}
+                  </label>
+                  <p>
+                    <dfn class="sr-only">{{ 'layout.cart.before_noon' | t }}</dfn>
+                    {{ 'layout.cart.before_noon_explanation' | t }}
+                  </p>
+                  <label for="truck-method" class="cart__method-label">
+                    <input type="radio" name="attributes[_method]" class="js-delivery-type" id="truck-method" value="first_off_truck">
+                    {{ 'layout.cart.first_off_truck' | t }}
+                  </label>
+                  <p>
+                    <dfn class="sr-only">{{ 'layout.cart.first_off_truck' | t }}</dfn>
+                    {{ 'layout.cart.first_off_truck_explanation' | t }}
+                  </p>
+                {%- else -%}
+                  <label for="pickup-method" class="cart__method-label">
+                    <input type="radio" name="attributes[_method]" class="js-delivery-type" id="pickup-method" value="pickup" checked>
+                    {{ 'layout.cart.pickup' | t }}
+                  </label>
+                {%- endif -%}
+                <button type="button" class="btn btn--check-dates js-check-dates">{{ 'layout.cart.check_available_dates' | t }}</button>
+                <p class="cart__error-message hide js-no-dates">{{ 'layout.cart.no_date_available' | t }}</p>
+              </div>
+            {%- endif -%}
             <div class="grid__item large-up--two-thirds">
+              {%- assign textarea_extra_class = '' -%}
+              {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
+                {%- assign textarea_extra_class = ' cart__note--full' -%}
+                <p class="cart__delivery-title">{{ 'layout.cart.delivery_title' | t }}</p>
+                <p class="cart__delivery-message">{{ 'layout.cart.delivery_message' | t }}</p>
+                <div class="grid">
+                  <div class="grid__item medium-up--one-third">
+                    <label for="delivery-date-1">Date 1</label>
+                    <input id="delivery-date-1" type="text" name="attributes[_date_1]" class="form__input js-tail-datetime-field-1" readonly>
+                    <div class="cart__date-picker-container js-tail-datetime-holder-1"></div>
+                  </div>
+                  <div class="grid__item medium-up--one-third">
+                    <label for="delivery-date-2">Date 2</label>
+                    <input id="delivery-date-2" type="text" name="attributes[_date_2]" class="form__input js-tail-datetime-field-2" readonly>
+                    <div class="cart__date-picker-container js-tail-datetime-holder-2"></div>
+                  </div>
+                  <div class="grid__item medium-up--one-third">
+                    <label for="delivery-date-3">Date 3</label>
+                    <input id="delivery-date-3" type="text" name="attributes[_date_3]" class="form__input js-tail-datetime-field-3" readonly>
+                    <div class="cart__date-picker-container js-tail-datetime-holder-3"></div>
+                  </div>
+                </div>
+                <p class="cart__error-message hide js-dates-invalid">{{ 'layout.cart.invalid_dates' | t }}</p>
+              {%- endif -%}
               <label for="CartSpecialInstructions" class="cart__note-label label--block">{{ 'cart.general.note' | t }}</label>
-              <textarea name="note" id="CartSpecialInstructions" class="input--block cart__note form__input">{{ cart.note }}</textarea>
+              <textarea name="note" id="CartSpecialInstructions" class="input--block form__input cart__note{{textarea_extra_class}}">{{ cart.note }}</textarea>
             </div>
-            <div class="grid__item text-center large-up--one-third large-up--text-right">
-
+            {%- assign push_class = '' -%}
+            {%- if invalid_fulfillment == false and has_custom_pricing == true  -%}
+              {%- assign push_class = ' large-up--push-two-thirds' -%}
+              </div><div class="grid">
+            {%- endif -%}
+            <div class="grid__item text-center large-up--one-third large-up--text-right{{push_class}}">
               {%- if cart.cart_level_discount_applications != blank -%}
                 <div class="order-discount-cart-wrapper">
                   {%- for discount_application in cart.cart_level_discount_applications -%}
@@ -147,23 +215,6 @@
                 <span class="cart__subtotal h3">{{ subtotal | money }}</span>
               </p>
 
-              {%- capture taxes_shipping_checkout -%}
-                {%- if shop.taxes_included and shop.shipping_policy.body != blank -%}
-                  {{ 'cart.general.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
-                {%- elsif shop.taxes_included -%}
-                  {{ 'cart.general.taxes_included_but_shipping_at_checkout' | t }}
-                {%- elsif shop.shipping_policy.body != blank -%}
-                  {{ 'cart.general.taxes_and_shipping_policy_at_checkout_html' | t: link: shop.shipping_policy.url }}
-                {%- else -%}
-                  {{ 'cart.general.taxes_and_shipping_at_checkout' | t }}
-                {%- endif -%}
-              {%- endcapture -%}
-
-              <p class="cart__policies txt--emphasis rte">{{ taxes_shipping_checkout }}</p>
-              {%- if fulfillment_method == '' -%}
-                {%- assign fulfillment_method = 'delivery' -%}
-              {%- endif -%}
-              <input type="hidden" name="attributes[method]" value="{{fulfillment_method}}">
               <div class="grid">
                 <div class="grid__item one-fifth">
                   <button type="submit" name="update" class="btn btn--secondary update-cart">
@@ -175,10 +226,15 @@
                   {%- if invalid_fulfillment -%}
                     <p>You cannot mix fulfillment methods</p>
                   {%- else -%}
-                    <button type="submit" name="checkout" class="btn full-width">{{ 'cart.general.checkout' | t }}</button>
+                    {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
+                      <button type="button" name="checkout" class="btn full-width js-go-to-checkout" disabled>{{ 'cart.general.checkout' | t }}</button>
+                    {%- else -%}
+                      <button type="submit" name="checkout" class="btn full-width">{{ 'cart.general.checkout' | t }}</button>
+                    {%- endif -%}
                   {%- endif -%}
                 </div>
               </div>
+              <p class="cart__error-message hide js-no-response">{{ 'layout.cart.no_checkout_available' | t }}</p>
               <ul class="list--inline payment-icons">
                 {%- for type in shop.enabled_payment_types -%}
                   <li>
@@ -196,6 +252,11 @@
           </div>
         </footer>
         {%- comment -%}{% render 'shipping-calculator' %}{%- endcomment -%}
+        {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
+          <input type="hidden" name="attributes[customer_latitude]" class="js-address-latitude" value="{{cart.attributes.customer_latitude}}">
+          <input type="hidden" name="attributes[customer_longitude]" class="js-address-longitude" value="{{cart.attributes.customer_longitude}}">
+          <input type="hidden" name="attributes[zip_code]" class="js-address-zip" value="{{cart.attributes.zip_code}}">
+        {%- endif -%}
       </form>
     {% else %}
     {% comment %}
@@ -210,3 +271,22 @@
     {% endif %}
   </div>
 </div>
+{%- if cart.item_count > 0 -%}
+  <script>
+    {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
+      const hasCustomPricing = true;
+      const cartItems = [{% for item in cart.items %}{
+        {%- assign item_value = 0 -%}
+        {%- if item.properties._custom_price != blank -%}
+          {%- assign item_value = item.properties._custom_price | times: 100 -%}
+        {%- elsif item.original_price != item.final_price -%}
+          {%- assign item_value = item.final_price -%}
+        {%- else -%}
+          {%- assign item_value = item.original_price -%}
+        {%- endif -%}
+        variant_id: {{item.id}}, quantity: {{item.quantity}}, price: {{item_value | money_without_currency}},
+        product_type: {{item.product.type | downcase | json}}, product_id: {{item.product.id}}
+      }{%- unless forloop.last -%},{%- endunless -%}{% endfor %}];
+    {%- endif -%}
+  </script>
+{%- endif -%}
