--- a/assets/cart.scss
+++ b/assets/cart.scss
@@ -15,6 +15,16 @@ $cart_desk: 990px;
   }
 }
 
+.cart {
+  .cart__method-label {
+    font-size: 14px;
+  
+    @media only screen and (min-width: #{$cart_desk}) {
+      font-size: 16px;
+    }
+  }
+}
+
 .cart__header-labels {
   th {
     font-size: 18px;
@@ -88,6 +98,12 @@ $cart_desk: 990px;
   }
 }
 
+.cart__note--full {
+  @media only screen and (min-width: #{$cart_desk}) {
+    max-width: 100%;
+  }
+}
+
 .cart__policies {
   color: #747474;
   margin-bottom: 25px;
@@ -115,4 +131,49 @@ $cart_desk: 990px;
 
 .payment-icons {
   margin-top: 20px;
+}
+
+.cart__delivery-method {
+  text-align: left;
+}
+
+.btn--check-dates {
+  margin: 10px 0;
+}
+
+.cart__date-picker-container {
+  .tail-datetime-calendar {
+    margin-left: 0;
+  }
+}
+
+.cart__delivery-title {
+  font-weight: bold;
+}
+
+.cart__delivery-message {
+  font-size: 14px;
+}
+
+.tail-datetime-calendar .calendar-datepicker table tr td.date-disabled:after {
+  display: none;
+}
+
+.tail-datetime-calendar .calendar-datepicker table tr td.calendar-day.date-select,
+.tail-datetime-calendar .calendar-datepicker table tr td.calendar-decade.date-select,
+.tail-datetime-calendar .calendar-datepicker table tr td.calendar-month.date-select,
+.tail-datetime-calendar .calendar-datepicker table tr td.calendar-year.date-select {
+  border-color: #54a45b;
+  background-color: #54a45b;
+}
+
+.cart__error-message {
+  background-color: #fff8f8;
+  border: 1px solid #D20000;
+  color: #D20000;
+  font-size: 16px;
+  line-height: 18px;
+  margin-top: 15px;
+  padding: 10px 11px;
+  text-align: left;
 }
