--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -44,7 +44,7 @@ $grid-breakpoints: (
     - Will not work if `theme/_grid.scss` is removed
 ==============================================================================*/
 $grid-breakpoint-has-widths: ($small, $medium-up, $large-up);
-$grid-breakpoint-has-push: ($medium-up);
+$grid-breakpoint-has-push: ($medium-up, $large-up);
 
 /*================ Color Variables ================*/
 
