--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -174,6 +174,7 @@
 
           {% form 'product', product, class: product_classes, data-ajax-add-to-cart: true, data-product-id: product.id, data-enable-history-state: history_state_data %}
             {%- if use_pallet == true -%}
+              <input type="hidden" name="properties[pickup_location]" class="js-pickup-location" value="">
               <div class="product-single__methods">
                 <input type="radio" name="properties[_method]" class="toggle-input hide js-delivery-method" id="delivery-method" value="delivery" checked>
                 <label for="delivery-method" class="toggle-label">{{ 'layout.product.delivery' | t }}</label>
