--- a/assets/cart.scss
+++ b/assets/cart.scss
@@ -18,7 +18,7 @@ $cart_desk: 990px;
 .cart {
   .cart__method-label {
     font-size: 14px;
-  
+
     @media only screen and (min-width: #{$cart_desk}) {
       font-size: 16px;
     }
@@ -118,17 +118,6 @@ $cart_desk: 990px;
   }
 }
 
-.sr-only {
-  border: 0 ;
-  clip: rect(0,0,0,0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
 .payment-icons {
   margin-top: 20px;
 }
@@ -176,4 +165,41 @@ $cart_desk: 990px;
   margin-top: 15px;
   padding: 10px 11px;
   text-align: left;
+}
+
+.cart__error-message--warning {
+  background-color: #fffde4;
+  border-color: #928800;
+  color: #928800;
+  display: inline-block;
+  line-height: 1;
+  margin-top: 0;
+  padding: 16px 11px;
+  vertical-align: top;
+}
+
+.form__input--date {
+  background-image: url(./calendar.svg);
+  background-repeat: no-repeat;
+  background-position: 95% center;
+  background-size: 20px;
+}
+
+.form__input--date-missing {
+  border: 1px solid #D20000;
+}
+
+.update-cart {
+  margin-bottom: 16px;
+}
+
+.arrow {
+  border: solid ;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.arrow--right {
+  transform: rotate(-45deg);
 }
