--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -5147,3 +5147,14 @@ button {
   }
 }
 
+.sr-only {
+  border: 0 ;
+  clip: rect(0,0,0,0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
