--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -147,26 +147,20 @@
               <div class="grid__item medium-up--one-third">
                 <p class="cart__delivery-title">{{ 'layout.cart.choose_delivery_type_html' | t }}</p>
                 {%- if fulfillment_method == 'delivery' -%}
-                  <label for="standard-method" class="cart__method-label">
-                    <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="standard-method" value="standard_delivery">
-                    {{ 'layout.cart.standard_delivery' | t }}
-                  </label>
+                  <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="standard-method" value="standard_delivery" data-price="{{ settings.normal_delivery_price | default: '0' }}">
+                  <label for="standard-method" class="cart__method-label">{{ 'layout.cart.standard_delivery' | t }}</label>
                   <p>
                     <dfn class="sr-only">{{ 'layout.cart.standard_delivery' | t }}</dfn>
                     {{ 'layout.cart.standard_delivery_explanation' | t }}
                   </p>
-                  <label for="noon-method" class="cart__method-label">
-                    <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="noon-method" value="before_noon">
-                    {{ 'layout.cart.before_noon' | t }}
-                  </label>
+                  <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="noon-method" value="before_noon" data-price="{{ settings.before_noon_delivery_price | default: '4999' }}">
+                  <label for="noon-method" class="cart__method-label">{{ 'layout.cart.before_noon' | t }}</label>
                   <p>
                     <dfn class="sr-only">{{ 'layout.cart.before_noon' | t }}</dfn>
                     {{ 'layout.cart.before_noon_explanation' | t }}
                   </p>
-                  <label for="truck-method" class="cart__method-label">
-                    <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="truck-method" value="first_off_truck">
-                    {{ 'layout.cart.first_off_truck' | t }}
-                  </label>
+                  <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="truck-method" value="first_off_truck" data-price="{{ settings.before_nine_delivery_price | default: '9999' }}">
+                  <label for="truck-method" class="cart__method-label">{{ 'layout.cart.first_off_truck' | t }}</label>
                   <p>
                     <dfn class="sr-only">{{ 'layout.cart.first_off_truck' | t }}</dfn>
                     {{ 'layout.cart.first_off_truck_explanation' | t }}
@@ -233,7 +227,7 @@
 
               <p class="cart__subtotal-container">
                 <span class="cart__subtotal-title h3">{{ 'cart.general.subtotal' | t }}</span>
-                <span class="cart__subtotal h3">{{ subtotal | money }}</span>
+                <span class="cart__subtotal h3 js-cart-subtotal" data-value="{{ subtotal }}">{{ subtotal | money }}</span>
               </p>
 
               <div>
