add utilities scripts

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -200,6 +200,7 @@
   <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
   <script src="{{ 'theme.js' | asset_url }}" defer></script>
   <script src="{{ 'sidebar-cart.js' | asset_url }}" defer></script>
+  <script src="{{ 'utils.js' | asset_url }}" defer></script>
   {%- if template.name == 'account' -%}
     <script src="{{ 'account.js' | asset_url }}" defer></script>
   {%- endif -%}
