add bold bundle products to cart

--- a/assets/product.scss
+++ b/assets/product.scss
@@ -65,7 +65,8 @@ $desk: 1100px;
   }
 }
 
-.single-option-selector {
+.single-option-selector,
+.bold-bundles-child-product__variant-selector {
   background-color: $white;
   border: 1px solid $border-color;
   color: #808080;
