--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -243,7 +243,7 @@
   </script>
   <!-- end olark code -->
 
-  {%- if template.name != 'index' and template.name != 'collection' and template.name != 'cart' and template.name != 'account'-%}
+  {%- if template.name != 'index' and template.name != 'collection' and template.name != 'account'-%}
     {%- render 'bold-common' -%}
   {%- endif -%}
   {%- if template.name == 'product' -%}
